refactor: Migrate to Java 17
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.migrate.UpgradeToJava17?organizationId=NWNiM2EzZTUtODQ5MS00NTQxLTliZTgtNzgyYjY4NzVlOTJl

Co-authored-by: Moderne <team@moderne.io>